<resources>
    <string name="razorpay_api">rzp_live_brCC4SHOENtXPY</string>
    <string name="app_name">Eye Break</string>
    <string name="course">Courses</string>
    <string name="video">Videos</string>
    <string name="select_issue">Select issue</string>
    <string name="help_subtitle">Write about the problem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="buy_course">Buy Now</string>
    <string name="view_course">View Course</string>
    <string name="price_subtext">for the complete course</string>
    <string name="dummy_course_name">Course Name</string>
    <string name="dummy_feature">Feature</string>
    <string name="dummy_description">Description</string>
    <string name="dummy_value">20</string>
    <string name="browse_courses">Browse Courses</string>
    <string name="no_connection">No Network Connection</string>
    <string name="tap_to_retry">Swipe Down to Retry</string>
    <string name="password">Password</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="notification">Notifications</string>
    <string name="youtube_videos">YouTube Videos</string>
    <string name="change_password">Change Password</string>
    <string name="no_data_found">No Data Found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs">₹</string>
    <string name="daily_quiz">Daily Quiz</string>
    <string name="exam_notes">Appx Core Notes</string>
    <string name="job_notification">Job Alerts.</string>
    <string name="OK">OK</string>
    <string name="correct">Correct : </string>
    <string name="incorrect">Incorrect : </string>
    <string name="askaquery">Ask a Query</string>
    <string name="videos">Videos</string>
    <string name="pdfs">PDFs</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="questions">Questions</string>
    <string name="register">Register</string>
    <string name="quiz">Quiz</string>
    <string name="minutes">Minutes</string>
    <string name="view_results">View Result</string>
    <string name="resume_test">Resume Test</string>
    <string name="attempt">Attempt</string>
    <string name="attempts">Attempts</string>
    <string name="attempt_quiz">Attempt Quiz</string>
    <string name="video_solution">Video Solution</string>
    <string name="seeAllAnswer">See All Answers</string>
    <string name="answer">Answers</string>
    <string name="yourScore">Your Score : </string>
    <string name="your_rank">Your Rank : </string>
    <string name="choose_exam">Choose Exam</string>
    <string name="add_answer_here">Add your answer here</string>
    <string name="post_doubt">Post Doubt</string>
    <string name="doubts">Doubts</string>
    <string name="upload_Image">Upload Image</string>
    <string name="Attach_Image">Attach Image</string>
    <string name="full_solution">See Full Solution</string>
    <string name="full_solution_title">Full Solution</string>
    <string name="back_home">Back to Home</string>
    <string name="bad_score_overview">You can do better</string>
    <string name="good_score_overview">Well Done!</string>
    <string name="filter_by_exam">Filter by exam</string>
    <string name="reply">Reply</string>
    <string name="ayp_play_button">Play button</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="unattempt">Unattempted : </string>
    <string name="accuracy">Accuracy : </string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="download">Downloads</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_watch_now">Watch Now</string>
    <string name="exam_special_title">Appx Core Times Special</string>
    <string name="live_title">Live</string>
    <string name="previous_title">Previous</string>
    <string name="test_series">Test Series</string>
    <string name="solution">Solution</string>
    <string name="report">Report</string>
    <string name="mock_test_package">Mock Test Package</string>
    <string name="dummy_price">599</string>
    <string name="mock_test">Mock Tests</string>
    <string name="overview">Overview</string>
    <string name="your_plan">Your Plan</string>
    <string name="offer_price">Offer Price</string>
    <string name="total_payment">Total Payment :</string>
    <string name="feature_5">Feature 5</string>
    <string name="feature_4">Feature 4</string>
    <string name="feature_3">Feature 3</string>
    <string name="feature__2">Feature 2</string>
    <string name="feature_1">Feature 1</string>
    <string name="course_name">Course Name</string>
    <string name="time_left">Free - 4:08 min left</string>
    <string name="titile_live_video_player">Title of the video|Exam name</string>
    <string name="live">Live</string>
    <string name="live_classes">Live Classes</string>
    <string name="reattempt">Reattempt</string>
    <string name="my_test_series">My Test Series</string>
    <string name="live_test_series">Live Test Series</string>
    <string name="previous_year_papers">Previous Year Papers</string>
    <string name="all_test_series">All Test Series</string>
    <string name="browse_test_series">Browse Test Series</string>
    <string name="no_test_series">You haven\'t purchased any Test Series</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="you_have_no_purchases">No Purchases Yet !!</string>
    <string name="no_upcoming_classes">No Upcoming Classes</string>
    <string name="no_live_classes">No live classes</string>
    <string name="no_previous_classes">No Previous classes</string>
    <string name="live_vid">LIVE</string>
    <string name="select_subject">Select Subject</string>
    <string name="view_details">View Details</string>
    <string name="test_end_text">Your test has ended. Please click on View Result to proceed.</string>
    <string name="live_cap">LIVE</string>
    <string name="no_live_class">No Featured Class Right Now</string>
    <string name="problem_signin">Facing problem in Signing in?</string>
    <string name="call_us">Call Us</string>
    <string name="skip">Skip</string>
    <string name="watch_on_360p">Watch in 360p</string>
    <string name="watch_fullscreen">Watch in fullscreen</string>
    <string name="pay_via">"Pay via : "</string>
    <string name="online_payment">Pay Online</string>
    <string name="close">Close</string>
    <string name="total_time_consumed">Total Time Consumed</string>
    <string name="correct_answer_time">Correct Answers</string>
    <string name="time_consumed_for_incorrect_answer">Incorrect Answer</string>
    <string name="unattempted_text">Unattempted Questions</string>
    <string name="time_stats">Time Stats</string>
    <string name="section_stats">Section Stats</string>
    <string name="correct_">Correct</string>
    <string name="incorrect_">Incorrect</string>
    <string name="unattempted_">Unattempted</string>
    <string name="section_time_stats">Section Time Stats</string>
    <string name="section_question_stats">Section Question Stats</string>
    <string name="question_stats">Question Stats</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="discount_coupon">Discount Coupon</string>
    <string name="apply">Apply</string>
    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string name="invalid_coupon">Invalid Coupon</string>
    <string name="coupon_applied_successfully">Coupon Applied Successfully</string>
    <string name="coupon_alert">Please Enter a Coupon Code</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="timeout_message">It is taking longer than usual , please try after sometime</string>
    <string name="failure_message">We can\'t connect to the internet or are currently having server issues</string>
    <string name="not_found">User not found</string>
    <string name="server_error">Internet Error</string>
    <string name="otp_error">OTP doesn\'t match</string>
    <string name="please_wait">Please Wait</string>
    <string name="search">Search</string>
    <string name="please_enter_text_to_search">Enter Text to Search</string>
    <string name="latest_byte">Latest Byte</string>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="no_bytes_found">No Bytes Found</string>
    <string name="byte_end_message">We have reached the end of today\'s byte</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="select_concept">Select Concept</string>
    <string name="reset_password_">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="live_chat">Live Chat</string>
    <string name="type_your_doubts_here">Type your doubts here</string>
    <string name="type_here">Type here</string>
    <string name="send">Send</string>
    <string name="classes">Classes</string>
    <string name="pdf">PDF</string>
    <string name="title">Title</string>
    <string name="enter_e_mail_id">Enter E-mail Id</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_sent_on_email_address">OTP sent on email address</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="please_wait_">Please wait…</string>
    <string name="mayank">Mayank</string>
    <string name="dumy_email">test@mail.com</string>
    <string name="downloads">Downloads</string>
    <string name="my_timetable">My Timetable</string>
    <string name="settings">Settings</string>
    <string name="eligibility_calculator">Eligibility Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="mins">mins</string>
    <string name="set_water_reminder">Set Eye Break Reminder</string>
    <string name="select_the_time_of_waking_up">Select the time of Waking Up</string>
    <string name="select_time_of_sleeping">Select time of sleeping</string>
    <string name="set_a_water_reminder_for_every">Set an Eye reminder for every</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel_previous_reminder">Cancel Previous Reminder</string>
    <string name="set">Set</string>
</resources>