<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.AlarmSetActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/set_water_reminder"
                android:textColor="@color/text_color_bck"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remind_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dp5"
                    android:text="@string/set_a_water_reminder_for_every"
                    android:textColor="@color/text_color_bck"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/hour_picker"
                    android:layout_width="@dimen/dp50"
                    android:padding="@dimen/dp5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_input_background"
                    android:gravity="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hour_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/mins"
                    android:textColor="@color/text_color_bck"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/wakeup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wake_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:text="@string/select_the_time_of_waking_up"
                    android:textColor="@color/text_color_bck"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/wake_picker"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginStart="@dimen/dp40"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_clock" />

            </LinearLayout>

            <Button
                android:id="@+id/set_wake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/loginbuttonbackground"
                android:text="@string/set"
                android:textColor="@color/white" />


            <LinearLayout
                android:id="@+id/sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sleep_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_time_of_sleeping"
                    android:textColor="@color/text_color_bck"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/sleep_picker"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginStart="@dimen/dp40"
                    android:background="@drawable/ic_clock"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/set_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/loginbuttonbackground"
                    android:text="@string/set"
                    android:visibility="gone"
                    android:textColor="@color/white" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/cancel_reminder"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/dp10"
                    android:layout_weight="1"
                    android:background="@drawable/text_input_background"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/cancel_previous_reminder"
                    android:textColor="@color/red_900" />

                <Button
                    android:id="@+id/set_reminder"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginHorizontal="@dimen/dp10"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@drawable/loginbuttonbackground"
                    android:text="@string/set_reminder"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>